--- a/views/webskjema.html
+++ b/views/webskjema.html
@@ -36,88 +36,208 @@
     <main class="mdl-layout__content">
         <div class="page-content mdl-grid center-items">
             <ul class="mdl-list">
-        <details class="mdl-expansion">
-            <summary class="mdl-expansion__summary">
-                <span class="mdl-expansion__header">Kompleksinfo</span>
-            </summary>
-            <div class="mdl-expansion__content mdl-grid center-items">
-                <ul class="mdl-list">
-                <li><div class="mdl-textfield mdl-js-textfield">
-                    <input class="mdl-textfield__input" type="text" id="Id">
-                    <label class="mdl-textfield__label" for="Id">Id</label>
-                </div>
-                    </li>
-                    <li><div class="mdl-textfield mdl-js-textfield">
-                    <input class="mdl-textfield__input" type="text" id="Linje">
-                    <label class="mdl-textfield__label" for="Linje">Linje</label>
-                </div>
-                    </li>
-                    <li> <div class="mdl-textfield mdl-js-textfield">
-                    <input class="mdl-textfield__input" type="text" id="Distrikt">
-                    <label class="mdl-textfield__label" for="Distrikt">Distrikt</label>
-                </div></li>
+                <li>
+                    <details class="mdl-expansion">
+                        <summary class="mdl-expansion__summary">
+                            <span class="mdl-expansion__header">Kompleksinfo</span>
+                        </summary>
+                        <div class="mdl-expansion__content mdl-grid center-items">
+                            <ul class="mdl-list">
+                                <li>
+                                    <div class="mdl-textfield mdl-js-textfield">
+                                        <input class="mdl-textfield__input" type="text" id="Id">
+                                        <label class="mdl-textfield__label" for="Id">Id</label>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="mdl-textfield mdl-js-textfield">
+                                        <input class="mdl-textfield__input" type="text" id="Linje">
+                                        <label class="mdl-textfield__label" for="Linje">Linje</label>
+                                    </div>
+                                </li>
+                                <li> <div class="mdl-textfield mdl-js-textfield">
+                                    <input class="mdl-textfield__input" type="text" id="Distrikt">
+                                    <label class="mdl-textfield__label" for="Distrikt">Distrikt</label>
+                                </div>
+                                </li>
+                                <li><div class="mdl-textfield mdl-js-textfield">
+                                    <input class="mdl-textfield__input" type="text" id="Kompleks">
+                                    <label class="mdl-textfield__label" for="Kompleks">Kompleks</label>
+                                </div>
+                                </li>
+                                <li>
+                                    <div class="mdl-textfield mdl-js-textfield">
+                                        <input class="mdl-textfield__input" type="text" id="ByggnrIJBV">
+                                        <label class="mdl-textfield__label" for="ByggnrIJBV">Byggnr i JBV</label>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="mdl-textfield mdl-js-textfield">
+                                        <input class="mdl-textfield__input" type="text" id="NavnILydiaJBV">
+                                        <label class="mdl-textfield__label" for="NavnILydiaJBV">Navn i Lydia JBV</label>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="mdl-textfield mdl-js-textfield">
+                                        <input class="mdl-textfield__input" type="text" id="Bygg">
+                                        <label class="mdl-textfield__label" for="Bygg">Bygg</label>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="mdl-textfield mdl-js-textfield">
+                                        <input class="mdl-textfield__input" type="text" id="Merknad">
+                                        <label class="mdl-textfield__label" for="Merknad">Merknad</label>
+                                    </div>
+                                </li>
+                                <li>
+                                <div class="mdl-expansion__actions">
+                                    <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
+                                        Lagre
+                                    </button>
+                                    <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent">
+                                        Avbryt
+                                    </button>
+                                </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </details>
+                </li>
+                <li>
+                    <details class="mdl-expansion">
+                        <summary class="mdl-expansion__summary">
+                            <span class="mdl-expansion__header">Kontaktpersoner</span>
+                        </summary>
 
-                    <li><div class="mdl-textfield mdl-js-textfield">
-                    <input class="mdl-textfield__input" type="text" id="Kompleks">
-                    <label class="mdl-textfield__label" for="Kompleks">Kompleks</label>
-                </div>
-                    </li>
-                    <li><div class="mdl-textfield mdl-js-textfield">
-                    <input class="mdl-textfield__input" type="text" id="ByggnrIJBV">
-                    <label class="mdl-textfield__label" for="ByggnrIJBV">Byggnr i JBV</label>
-                </div>
-                    </li>
-                    <li><div class="mdl-textfield mdl-js-textfield">
-                    <input class="mdl-textfield__input" type="text" id="NavnILydiaJBV">
-                    <label class="mdl-textfield__label" for="NavnILydiaJBV">Navn i Lydia JBV</label>
-                </div>
-                    </li>
-                    <li><div class="mdl-textfield mdl-js-textfield">
-                    <input class="mdl-textfield__input" type="text" id="Bygg">
-                    <label class="mdl-textfield__label" for="Bygg">Bygg</label>
-                </div>
-                    </li>
-                    <li><div class="mdl-textfield mdl-js-textfield">
-                    <input class="mdl-textfield__input" type="text" id="Merknad">
-                    <label class="mdl-textfield__label" for="Merknad">Merknad</label>
-                </div>
-                    </li>
-                    </ul>
-            </div>
-            <div class="mdl-expansion__actions">
-                <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
-                    Lagre
-                </button>
-                <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent">
-                    Avbryt
-                </button>
-            </div>
-        </details>
-        <details class="mdl-expansion">
-            <summary class="mdl-expansion__summary">
-                <span class="mdl-expansion__header">Kontaktpersoner</span>
-            </summary>
-
-            <div class="mdl-expansion__actions">
-                <button class="mdl-expansion__action">Save</button>
-                <button class="mdl-expansion__action">Cancel</button>
-            </div>
-        </details>
-        <details class="mdl-expansion">
-            <summary class="mdl-expansion__summary">
-                <span class="mdl-expansion__header">Bygginfo</span>
-            </summary>
-            <div class="mdl-expansion__content">
-                <select>
-                    <option>One</option>
-                    <option>two</option>
-                </select>
-            </div>
-            <div class="mdl-expansion__actions">
-                <button class="mdl-expansion__action">Save</button>
-                <button class="mdl-expansion__action">Cancel</button>
-            </div>
-        </details>
+                        <div class="mdl-expansion__content mdl-grid center-items">
+                            <ul class="mdl-list">
+                                <li>
+                                    <div class="mdl-textfield mdl-js-textfield">
+                                        <input class="mdl-textfield__input" type="text" id="Id">
+                                        <label class="mdl-textfield__label" for="Id">Id</label>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="mdl-textfield mdl-js-textfield">
+                                        <input class="mdl-textfield__input" type="text" id="Linje">
+                                        <label class="mdl-textfield__label" for="Linje">Linje</label>
+                                    </div>
+                                </li>
+                                <li> <div class="mdl-textfield mdl-js-textfield">
+                                    <input class="mdl-textfield__input" type="text" id="Distrikt">
+                                    <label class="mdl-textfield__label" for="Distrikt">Distrikt</label>
+                                </div>
+                                </li>
+                                <li><div class="mdl-textfield mdl-js-textfield">
+                                    <input class="mdl-textfield__input" type="text" id="Kompleks">
+                                    <label class="mdl-textfield__label" for="Kompleks">Kompleks</label>
+                                </div>
+                                </li>
+                                <li>
+                                    <div class="mdl-textfield mdl-js-textfield">
+                                        <input class="mdl-textfield__input" type="text" id="ByggnrIJBV">
+                                        <label class="mdl-textfield__label" for="ByggnrIJBV">Byggnr i JBV</label>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="mdl-textfield mdl-js-textfield">
+                                        <input class="mdl-textfield__input" type="text" id="NavnILydiaJBV">
+                                        <label class="mdl-textfield__label" for="NavnILydiaJBV">Navn i Lydia JBV</label>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="mdl-textfield mdl-js-textfield">
+                                        <input class="mdl-textfield__input" type="text" id="Bygg">
+                                        <label class="mdl-textfield__label" for="Bygg">Bygg</label>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="mdl-textfield mdl-js-textfield">
+                                        <input class="mdl-textfield__input" type="text" id="Merknad">
+                                        <label class="mdl-textfield__label" for="Merknad">Merknad</label>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="mdl-expansion__actions">
+                                        <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
+                                            Lagre
+                                        </button>
+                                        <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent">
+                                            Avbryt
+                                        </button>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </details>
+                </li>
+                <li>
+                    <details class="mdl-expansion">
+                        <summary class="mdl-expansion__summary">
+                            <span class="mdl-expansion__header">Bygginfo</span>
+                        </summary>
+                        <div class="mdl-expansion__content mdl-grid center-items">
+                            <ul class="mdl-list">
+                                <li>
+                                    <div class="mdl-textfield mdl-js-textfield">
+                                        <input class="mdl-textfield__input" type="text" id="Id">
+                                        <label class="mdl-textfield__label" for="Id">Id</label>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="mdl-textfield mdl-js-textfield">
+                                        <input class="mdl-textfield__input" type="text" id="Linje">
+                                        <label class="mdl-textfield__label" for="Linje">Linje</label>
+                                    </div>
+                                </li>
+                                <li> <div class="mdl-textfield mdl-js-textfield">
+                                    <input class="mdl-textfield__input" type="text" id="Distrikt">
+                                    <label class="mdl-textfield__label" for="Distrikt">Distrikt</label>
+                                </div>
+                                </li>
+                                <li><div class="mdl-textfield mdl-js-textfield">
+                                    <input class="mdl-textfield__input" type="text" id="Kompleks">
+                                    <label class="mdl-textfield__label" for="Kompleks">Kompleks</label>
+                                </div>
+                                </li>
+                                <li>
+                                    <div class="mdl-textfield mdl-js-textfield">
+                                        <input class="mdl-textfield__input" type="text" id="ByggnrIJBV">
+                                        <label class="mdl-textfield__label" for="ByggnrIJBV">Byggnr i JBV</label>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="mdl-textfield mdl-js-textfield">
+                                        <input class="mdl-textfield__input" type="text" id="NavnILydiaJBV">
+                                        <label class="mdl-textfield__label" for="NavnILydiaJBV">Navn i Lydia JBV</label>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="mdl-textfield mdl-js-textfield">
+                                        <input class="mdl-textfield__input" type="text" id="Bygg">
+                                        <label class="mdl-textfield__label" for="Bygg">Bygg</label>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="mdl-textfield mdl-js-textfield">
+                                        <input class="mdl-textfield__input" type="text" id="Merknad">
+                                        <label class="mdl-textfield__label" for="Merknad">Merknad</label>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="mdl-expansion__actions">
+                                        <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
+                                            Lagre
+                                        </button>
+                                        <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent">
+                                            Avbryt
+                                        </button>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </details>
+                </li>
             </ul>
         </div>
     </main>
