--- a/views/webskjema2.html
+++ b/views/webskjema2.html
@@ -27,53 +27,52 @@
         </ul>
     </div>
 </nav>
-
 <ul class="collapsible" data-collapsible="accordion">
     <li>
         <div class="collapsible-header"><i class="material-icons">location_on</i>Kompleksinfo</div>
         <div class="collapsible-body">  <ul class="mdl-list">
             <li>
-                <div class="mdl-textfield mdl-js-textfield">
+                <div class="input-field">
                     <input class="mdl-textfield__input" type="text" id="Id">
                     <label class="mdl-textfield__label" for="Id">Id</label>
                 </div>
             </li>
             <li>
-                <div class="mdl-textfield mdl-js-textfield">
+                <div class="input-field">
                     <input class="mdl-textfield__input" type="text" id="Linje">
                     <label class="mdl-textfield__label" for="Linje">Linje</label>
                 </div>
             </li>
-            <li> <div class="mdl-textfield mdl-js-textfield">
+            <li> <div class="input-field">
                 <input class="mdl-textfield__input" type="text" id="Distrikt">
                 <label class="mdl-textfield__label" for="Distrikt">Distrikt</label>
             </div>
             </li>
-            <li><div class="mdl-textfield mdl-js-textfield">
+            <li><div class="input-field">
                 <input class="mdl-textfield__input" type="text" id="Kompleks">
                 <label class="mdl-textfield__label" for="Kompleks">Kompleks</label>
             </div>
             </li>
             <li>
-                <div class="mdl-textfield mdl-js-textfield">
+                <div class="input-field">
                     <input class="mdl-textfield__input" type="text" id="ByggnrIJBV">
                     <label class="mdl-textfield__label" for="ByggnrIJBV">Byggnr i JBV</label>
                 </div>
             </li>
             <li>
-                <div class="mdl-textfield mdl-js-textfield">
+                <div class="input-field">
                     <input class="mdl-textfield__input" type="text" id="NavnILydiaJBV">
                     <label class="mdl-textfield__label" for="NavnILydiaJBV">Navn i Lydia JBV</label>
                 </div>
             </li>
             <li>
-                <div class="mdl-textfield mdl-js-textfield">
+                <div class="input-field">
                     <input class="mdl-textfield__input" type="text" id="Bygg">
                     <label class="mdl-textfield__label" for="Bygg">Bygg</label>
                 </div>
             </li>
             <li>
-                <div class="mdl-textfield mdl-js-textfield">
+                <div class="input-field">
                     <input class="mdl-textfield__input" type="text" id="Merknad">
                     <label class="mdl-textfield__label" for="Merknad">Merknad</label>
                 </div>
