--- a/views/webskjema2.html
+++ b/views/webskjema2.html
@@ -79,12 +79,8 @@
             </li>
             <li>
                 <div class="mdl-expansion__actions">
-                    <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
-                        Lagre
-                    </button>
-                    <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent">
-                        Avbryt
-                    </button>
+                    <a class="waves-effect waves-light btn">Lagre</a>
+                    <a class="waves-effect waves-light btn red darken-1">Avbryt</a>
                 </div>
             </li>
         </ul></div>
